; ModuleID = '/home/carl/AnghaBench/libui/common/extr_tablemodel.c_uiprivTableModelColorIfProvided.c'
source_filename = "/home/carl/AnghaBench/libui/common/extr_tablemodel.c_uiprivTableModelColorIfProvided.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @uiprivTableModelColorIfProvided(i32* %0, i32 %1, i32 %2, double* %3, double* %4, double* %5, double* %6) #0 {
  %8 = alloca i32, align 4
  %9 = alloca i32*, align 8
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca double*, align 8
  %13 = alloca double*, align 8
  %14 = alloca double*, align 8
  %15 = alloca double*, align 8
  %16 = alloca i32*, align 8
  store i32* %0, i32** %9, align 8
  store i32 %1, i32* %10, align 4
  store i32 %2, i32* %11, align 4
  store double* %3, double** %12, align 8
  store double* %4, double** %13, align 8
  store double* %5, double** %14, align 8
  store double* %6, double** %15, align 8
  %17 = load i32, i32* %11, align 4
  %18 = icmp eq i32 %17, -1
  br i1 %18, label %19, label %20

19:                                               ; preds = %7
  store i32 0, i32* %8, align 4
  br label %37

20:                                               ; preds = %7
  %21 = load i32*, i32** %9, align 8
  %22 = load i32, i32* %10, align 4
  %23 = load i32, i32* %11, align 4
  %24 = call i32* @uiprivTableModelCellValue(i32* %21, i32 %22, i32 %23)
  store i32* %24, i32** %16, align 8
  %25 = load i32*, i32** %16, align 8
  %26 = icmp eq i32* %25, null
  br i1 %26, label %27, label %28

27:                                               ; preds = %20
  store i32 0, i32* %8, align 4
  br label %37

28:                                               ; preds = %20
  %29 = load i32*, i32** %16, align 8
  %30 = load double*, double** %12, align 8
  %31 = load double*, double** %13, align 8
  %32 = load double*, double** %14, align 8
  %33 = load double*, double** %15, align 8
  %34 = call i32 @uiTableValueColor(i32* %29, double* %30, double* %31, double* %32, double* %33)
  %35 = load i32*, i32** %16, align 8
  %36 = call i32 @uiFreeTableValue(i32* %35)
  store i32 1, i32* %8, align 4
  br label %37

37:                                               ; preds = %28, %27, %19
  %38 = load i32, i32* %8, align 4
  ret i32 %38
}

declare dso_local i32* @uiprivTableModelCellValue(i32*, i32, i32) #1

declare dso_local i32 @uiTableValueColor(i32*, double*, double*, double*, double*) #1

declare dso_local i32 @uiFreeTableValue(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
